2016-04-29  Henry Butowsky  <henryb@hush.com>
	* Added has_miss()  to the utl_cls() the _miss() familty
	
2016-04-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.0-beta04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.0-beta04 final changes';git push
	git tag -a 4.6.0-beta04 -m 'Version 4.6.0-beta04 new features: TMPDIR, var=var.double(), c2b, grid_mapping';git push --tags

	* Finish first pass at documenting ncclimo

2016-04-28  Henry Butowsky  <henryb@hush.com>

	* IMPORTANT: revert mods in 4.5.4. Once again variables in input can be redefined in output without a cast:
	  time=time.int() is once again exactly equivalent to time[$time]=time.int()

	* Add to regular assign statement conformance of RHS, e.g, n2[time,lat,lon]=10.0;n2=time; // stretches time to conform to n2

2016-04-28  Henry Butowsky  <henryb@hush.com>

        * Add bsc_tst.nco to ncap2 perl test suite. Currently tests casting, hyperslabbing, and intrinsic functions.

2016-04-28  Henry Butowsky  <henryb@hush.com>

	* Changed RAM variables that represent netCDF types from __FLOAT, __DOUBLE ... to
          NC_NAT, NC_BYTE, NC_UBYTE, ... NC_FLOAT, NC_DOUBLE
	  Use these with the type() method,  e.g, if(var.type() == NC_FLOAT) var=var.double()

2016-04-27  Charlie Zender  <zender@uci.edu>

	* ncremap fix drc_tmp logic to work without $TMPDIR

	* ncremap search for ERWG, Tempest before trying to execute them

	* ncclimo add debugging info for MPI node list

2016-04-26  Charlie Zender  <zender@uci.edu>

	* Reset rcd handling in CF bounds logic

	* Add ncclimo support for "generic" datasets (like NASA MERRA) with YYYYMM format

2016-04-22  Charlie Zender  <zender@uci.edu>

	* Document --cb, --c2b

2016-04-20  Charlie Zender  <zender@uci.edu>

	* Treat as coordinates all variables listed in a "grid_mapping" attribute

	* Default source code download links now point to GitHub not SF

2016-04-18  Charlie Zender  <zender@uci.edu>

	* Excise old CF-handling from ncclimo
